terraform/modules/apps/rancher/manifests/rancher.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cattle-system
